--- a/css/index.css
+++ b/css/index.css
@@ -2,11 +2,10 @@
 /* global */
 :root {
     --primary-color : #050610;
-    --secondary-color: #15140d;
-    --accent-color: indigo;
-
+    --secondary-color: hsl(53, 24%, 9%);
+    --accent-color: #2c0449;
     --bg-color : linen;
-   --outline-color : gray; 
+   --outline-color : darkslateblue; 
    
    --short-transition: 0.4s;
    --border-rad: 6px;
@@ -14,14 +13,11 @@
 
 
 :root:has(h1.darkmode) {
-    --primary-color : whitesmoke;
-    --secondary-color: mintcream;
-    --accent-color: white;
-    
-    --bg-color : rgb(60, 60, 160);
-    --outline-color : lightgray; 
-   --color-gradient-light : white; 
-
+    --primary-color : aliceblue;
+    --secondary-color: ghostwhite;
+    --accent-color: mintcream;
+    --bg-color : rgb(120, 80, 80);
+    --outline-color : gainsboro; 
 }
 body,
 body::before,
@@ -32,12 +28,9 @@ body::after {
     text-align: center;
     margin: 0;
     color: var(--bg-color);
-    background: var(--primary-color);
+    background: radial-gradient(var(--accent-color), var(--primary-color));
     scroll-behavior: smooth;
 }
-/* body > * {
-    overflow: hidden;
-} */
 
 
 /* semantics */
@@ -55,17 +48,36 @@ header .block {
 main {
     display: grid;
     grid-template-columns: 3fr 2fr 300px;
-    margin: 0 30px;
+    margin: 40px 10vw;
+    isolation: isolate;
 }
 aside {
     transition: opacity 0.3s;
     opacity: 0;
-    margin: 1em 15px;
+    margin: 1em 1em;
+    padding: 1px;
     outline: 1px solid var(--outline-color);
-    box-shadow: inset
+    /* box-shadow: inset
     -2px -1px 2.5em var(--accent-color)
-    ;
+    ; */
     border-radius: var(--border-rad);
+    /* background: linear-gradient(200deg, var(--outline-color), var(--accent-color)); */
+    /* filter: contrast(120%) brightness(400%) ; */
+    
+    background-image:
+        linear-gradient( 
+        to bottom, 
+        transparent 40%,
+        var(--secondary-color) 85%, 
+        var(--accent-color) 100%
+         ),
+        linear-gradient(20deg, rgba(0,0,0,0), var(--accent-color)),
+        radial-gradient(circle at 20% 50%, var(--secondary-color) 70%, rgba(0,0,0,0)),
+        url("data:image/svg+xml,%3Csvg viewBox='0 0 65 65' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='4.6' numOctaves='6' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+}
+aside > * {
+    filter: brightness(100%);
+    background-image: none;
 }
 footer {
     height: 77vh;
@@ -88,7 +100,7 @@ h1 {
     position: relative;
     min-width: 300px;
     padding: 15px 5px;
-    outline: 2px solid var(--outline-color);
+    outline: 1px solid var(--outline-color);
     background: linear-gradient(
         160deg, 
         var(--accent-color),
@@ -100,9 +112,10 @@ h1 {
 }
 .text > h3 {
     font-weight: bold;
-    width: 100%;
+    /* width: 100%; */
+    margin: 10px;
     text-align: center;
-    outline: 2px solid var(--outline-color);
+    outline: 1px solid var(--outline-color);
     background: linear-gradient(
         160deg, 
         var(--secondary-color) 2%, 
@@ -131,9 +144,16 @@ details {
     opacity: 0.5;
 }
 details[open] {
+    padding: 0;
     opacity: 1;
     transition: all var(--short-transition);
-    padding: 0;
+    /* background: 
+    linear-gradient( 
+        to bottom, 
+        transparent 40%,
+        var(--secondary-color) 85%, 
+        var(--accent-color) 100%
+         ); */
 }
 details[open] > summary {
     border-bottom: 3px solid var(--accent-color);
@@ -144,6 +164,7 @@ summary {
     min-height: 100px;
     padding: 15px;
     margin: 0;
+    font-size: small;
     list-style: none;
     background: linear-gradient(
         180deg, 
@@ -166,6 +187,7 @@ footer summary {
 /* blocs */
 .container {
     min-height: 500px;
+    padding-bottom: 50px;
 }
 .contact {
     display: flex;
@@ -190,7 +212,9 @@ footer summary {
 .block--header {
     display: flex;
     align-items: end;
-    margin: 1em;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 60%;
 }
 .block--skills, .block--contact {
     justify-content: center;
@@ -271,13 +295,13 @@ svg {
     justify-content: center;
     height: 580px;
     border-radius: 0 0 var(--border-rad) var(--border-rad);
-    background: 
+    /* background: 
     linear-gradient( 
         to bottom, 
         transparent 40%,
         var(--secondary-color) 85%, 
         var(--accent-color) 100%
-         );
+         ); */
 }
 .bumper::before {
     position: relative;
@@ -372,6 +396,7 @@ svg {
 @media (max-width: 1100px) or (max-height: 700px) {
     main {
         display: block;
+        margin: 0 20px;
     }
     header {
         display: flex;
