--- a/css/index.css
+++ b/css/index.css
@@ -4,19 +4,27 @@
     --primary-color : #050610;
     --secondary-color: hsl(53, 24%, 9%);
     --accent-color: #2c0449;
-    --bg-color : linen;
+    --text-color : linen;
    --outline-color : darkslateblue; 
    
    --short-transition: 0.4s;
-   --border-rad: 6px;
+   --border-rad-sm: 6px;
+   --border-rad-bg: 20px;
 }
-
-
 :root:has(h1.darkmode) {
+    
+    /*
+    --primary-color: skyblue;
+    --secondary-color: mintcream;
+    --accent-color: royalblue;
+    --text-color : dodgerblue;
+    --outline-color : white;  
+    */
+
     --primary-color : aliceblue;
-    --secondary-color: ghostwhite;
-    --accent-color: mintcream;
-    --bg-color : rgb(120, 80, 80);
+    --secondary-color: mintcream;
+    --accent-color: ghostwhite;
+    --text-color : rgb(120, 80, 80);
     --outline-color : gainsboro; 
 }
 body,
@@ -27,7 +35,7 @@ body::after {
     line-height: 1.6em;
     text-align: center;
     margin: 0;
-    color: var(--bg-color);
+    color: var(--text-color);
     background: radial-gradient(var(--accent-color), var(--primary-color));
     scroll-behavior: smooth;
 }
@@ -57,13 +65,12 @@ aside {
     margin: 1em 1em;
     padding: 1px;
     outline: 1px solid var(--outline-color);
-    /* box-shadow: inset
+    box-shadow: inset
     -2px -1px 2.5em var(--accent-color)
-    ; */
-    border-radius: var(--border-rad);
+    ;
+    border-radius: var(--border-rad-sm);
     /* background: linear-gradient(200deg, var(--outline-color), var(--accent-color)); */
-    /* filter: contrast(120%) brightness(400%) ; */
-    
+    filter: contrast(100%) brightness(100%) ;    
     background-image:
         linear-gradient( 
         to bottom, 
@@ -72,8 +79,11 @@ aside {
         var(--accent-color) 100%
          ),
         linear-gradient(20deg, rgba(0,0,0,0), var(--accent-color)),
-        radial-gradient(circle at 20% 50%, var(--secondary-color) 70%, rgba(0,0,0,0)),
-        url("data:image/svg+xml,%3Csvg viewBox='0 0 65 65' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='4.6' numOctaves='6' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+        radial-gradient(circle at 50% 50%, var(--secondary-color) 36%, rgba(0,0,0,0)),
+        url("data:image/svg+xml,%3Csvg viewBox='0 0 65 65' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='5.6' numOctaves='5' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+}
+aside:hover {
+    outline: 3px solid var(--outline-color);
 }
 aside > * {
     filter: brightness(100%);
@@ -107,31 +117,35 @@ h1 {
         var(--secondary-color) 
         );
     border-radius: 6px;
-    color: var(--bg-color);
+    color: var(--text-color);
     cursor: pointer;
 }
-.text > h3 {
-    font-weight: bold;
+.tags > h3:hover {
+    outline: 3px solid var(--outline-color);
+}
+.tags > h3 {
+    font-size: small;
+    margin: 5px;
+    /* font-weight: bold; */
     /* width: 100%; */
-    margin: 10px;
     text-align: center;
     outline: 1px solid var(--outline-color);
     background: linear-gradient(
-        160deg, 
-        var(--secondary-color) 2%, 
+        360deg, 
+        var(--secondary-color) 70%, 
         var(--accent-color) 90%
         );
-    border-radius: var(--border-rad);
-    padding: 5px;
+    border-radius: var(--border-rad-bg);
+    padding: 0 15px;
 }
 a {
     text-decoration: none;
-    color: var(--bg-color);
+    color: var(--text-color);
 }
 a:hover > div {
     /* color: #223; */
-    border-radius: var(--border-rad);
-    background-color: var(--bg-color);
+    border-radius: var(--border-rad-sm);
+    background-color: var(--text-color);
 }
 svg {
     max-width: 50px;
@@ -171,9 +185,11 @@ summary {
         var(--primary-color), 
         var(--secondary-color)
         );
-    border-radius: var(--border-rad) var(--border-rad) 0 0;
-    border: 3px solid var(--secondary-color);
-    border-top: 3px solid var(--accent-color);
+    border-radius: var(--border-rad-sm) var(--border-rad-sm) 0 0;
+    /* border: 3px solid var(--secondary-color); */
+    border: 3px solid transparent;
+    /* border-top: 3px solid var(--accent-color); */
+    border-top: 3px solid transparent;
     text-shadow: 1px 1px 1px var(--primary-color);
 }
 summary:hover {
@@ -279,7 +295,7 @@ svg {
     justify-content: center;
     width: 50px;
     height: 50px;
-    background-color: var(--bg-color);
+    background-color: var(--text-color);
     border-radius: 25px;
     cursor: pointer;
 }
@@ -294,7 +310,7 @@ svg {
     align-items: center;
     justify-content: center;
     height: 580px;
-    border-radius: 0 0 var(--border-rad) var(--border-rad);
+    border-radius: 0 0 var(--border-rad-sm) var(--border-rad-sm);
     /* background: 
     linear-gradient( 
         to bottom, 
