--- a/css/index.css
+++ b/css/index.css
@@ -106,7 +106,7 @@ aside {
          ),
         linear-gradient(20deg, rgba(0,0,0,0), var(--accent-color)),
         radial-gradient(circle at 50% 50%, var(--secondary-color) 36%, rgba(0,0,0,0)),
-        url("data:image/svg+xml,%3Csvg viewBox='0 0 65 65' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='5.6' numOctaves='5' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+        url("data:image/svg+xml,%3Csvg viewBox='0 0 65 65' xmlns='https://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='5.6' numOctaves='5' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
 }
 aside:hover {
     outline: 3px solid var(--outline-color);
